--- a/index.html
+++ b/index.html
@@ -66,23 +66,13 @@
     </footer>
   </div>
 
-  <!-- Resume Modal -->
-  <div id="resumeModal" class="modal fade" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content rounded-4 shadow">
-        <div class="modal-header">
-          <h5 class="modal-title">My Resume</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body">
-          <p>This is where resume content goes.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+
 
   <!-- Chatbot Container -->
   <div id="chatbotContainer"></div>
+
+    <div id="resumeContainer"></div>
+
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
