--- a/resumeModal.html
+++ b/resumeModal.html
@@ -1,18 +1,32 @@
-<div id="resumeModal" class="fixed inset-0 bg-black/40 hidden items-center justify-center z-50 backdrop-blur-sm">
-    <div class="bg-gradient-to-tr from-indigo-50 to-purple-50 dark:from-gray-800 dark:to-gray-900 rounded-3xl p-10 max-w-md w-full relative shadow-2xl transform scale-95 opacity-0 transition-all duration-300">
-      <button id="closeModal" class="absolute top-5 right-5 text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-400 font-bold text-2xl transition">&times;</button>
-      <div class="flex justify-center mb-4">
-        <h1 class="text-4xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 drop-shadow-lg animate-pulse">Legion</h1>
-      </div>
-      <h2 class="text-3xl font-extrabold mb-3 text-indigo-700 dark:text-indigo-400 text-center">TalentCard</h2>
-      <p class="text-gray-600 dark:text-gray-300 text-center mb-6">
-        Unlock my journey, projects, and expertise. Take a peek at my Legion portfolio!
-      </p>
-      <div class="text-center">
-        <a href="assets/resume.pdf" target="_blank" class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-full text-lg font-semibold hover:bg-indigo-700 dark:hover:bg-indigo-500 shadow-lg transition transform hover:scale-105">
-           Access My Vault
+<!-- Resume Modal -->
+<div id="resumeModal" class="modal fade" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content border-0 rounded-4 shadow-lg" 
+         style="background: linear-gradient(135deg, #eef2ff, #f8f0ff);">
+      
+      <!-- Close Button -->
+      <button id="closeModal" type="button" class="btn-close position-absolute top-0 end-0 m-3" 
+              data-bs-dismiss="modal" aria-label="Close"></button>
+
+      <!-- Modal Body -->
+      <div class="modal-body text-center p-5">
+        <!-- Title -->
+        <h1 class="fw-bold display-5 mb-3 text-primary" 
+            style="background: linear-gradient(90deg, #6366f1, #8b5cf6, #ec4899); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
+          Legion
+        </h1>
+        
+        <h2 class="fw-bold h3 mb-3 text-primary">TalentCard</h2>
+        <p class="text-muted mb-4">
+          Unlock my journey, projects, and expertise. Take a peek at my Legion portfolio!
+        </p>
+
+        <!-- Access Resume Button -->
+        <a href="assets/resume.pdf" target="_blank" 
+           class="btn btn-primary btn-lg rounded-pill px-5 fw-semibold shadow-sm">
+          Access My Vault
         </a>
       </div>
     </div>
   </div>
-  
+</div>
